At this point i wonder if it would have been easier to have written this by hand